[project]
name = "asset-management-system"
version = "0.1.0"
description = "Asset Management System — DarkAtlas ASM module"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "asyncer>=0.0.8",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.9.0",
    "slowapi>=0.1.9",
    "psycopg2-binary>=2.9.12",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.6.0",
    "ty>=0.0.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
